Updated Stage 3 : link datasets

--- a/DataDrivenModel.ipynb
+++ b/DataDrivenModel.ipynb
@@ -809,7 +809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.4 Linking Data from Different Sources\n",
+    "### 1.4 Linking Data from Different Sources\n",
     "\n",
     "I am going to explore the correlation between educational 'success' and perceived happiness. I also want to examine gender disparity in education and its potential effect on purported happiness.\n",
     "\n",
@@ -1112,420 +1112,214 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "hapiness has 165, education has 202. Compare and remove unmatching rows?"
+    "hapiness has 165, education has 202. Compare and print unmatching countries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Afghanistan',\n",
-       " 'Albania',\n",
-       " 'Algeria',\n",
-       " 'Angola',\n",
-       " 'Argentina',\n",
-       " 'Armenia',\n",
-       " 'Australia',\n",
-       " 'Austria',\n",
-       " 'Azerbaijan',\n",
-       " 'Bahrain',\n",
-       " 'Bangladesh',\n",
-       " 'Belarus',\n",
-       " 'Belgium',\n",
-       " 'Belize',\n",
-       " 'Benin',\n",
-       " 'Bhutan',\n",
-       " 'Bolivia',\n",
-       " 'Bosnia and Herzegovina',\n",
-       " 'Botswana',\n",
-       " 'Brazil',\n",
-       " 'Bulgaria',\n",
-       " 'Burkina Faso',\n",
-       " 'Burundi',\n",
-       " 'Cambodia',\n",
-       " 'Cameroon',\n",
-       " 'Canada',\n",
-       " 'Central African Republic',\n",
-       " 'Chad',\n",
-       " 'Chile',\n",
-       " 'China',\n",
-       " 'Colombia',\n",
-       " 'Comoros',\n",
-       " 'Congo (Brazzaville)',\n",
-       " 'Congo (Kinshasa)',\n",
-       " 'Costa Rica',\n",
-       " 'Croatia',\n",
-       " 'Cuba',\n",
-       " 'Cyprus',\n",
-       " 'Czechia',\n",
-       " 'Denmark',\n",
-       " 'Djibouti',\n",
-       " 'Dominican Republic',\n",
-       " 'Ecuador',\n",
-       " 'Egypt',\n",
-       " 'El Salvador',\n",
-       " 'Estonia',\n",
-       " 'Eswatini',\n",
-       " 'Ethiopia',\n",
-       " 'Finland',\n",
-       " 'France',\n",
-       " 'Gabon',\n",
-       " 'Gambia',\n",
-       " 'Georgia',\n",
-       " 'Germany',\n",
-       " 'Ghana',\n",
-       " 'Greece',\n",
-       " 'Guatemala',\n",
-       " 'Guinea',\n",
-       " 'Guyana',\n",
-       " 'Haiti',\n",
-       " 'Honduras',\n",
-       " 'Hong Kong S.A.R. of China',\n",
-       " 'Hungary',\n",
-       " 'Iceland',\n",
-       " 'India',\n",
-       " 'Indonesia',\n",
-       " 'Iran',\n",
-       " 'Iraq',\n",
-       " 'Ireland',\n",
-       " 'Israel',\n",
-       " 'Italy',\n",
-       " 'Ivory Coast',\n",
-       " 'Jamaica',\n",
-       " 'Japan',\n",
-       " 'Jordan',\n",
-       " 'Kazakhstan',\n",
-       " 'Kenya',\n",
-       " 'Kosovo',\n",
-       " 'Kuwait',\n",
-       " 'Kyrgyzstan',\n",
-       " 'Laos',\n",
-       " 'Latvia',\n",
-       " 'Lebanon',\n",
-       " 'Lesotho',\n",
-       " 'Liberia',\n",
-       " 'Libya',\n",
-       " 'Lithuania',\n",
-       " 'Luxembourg',\n",
-       " 'Madagascar',\n",
-       " 'Malawi',\n",
-       " 'Malaysia',\n",
-       " 'Maldives',\n",
-       " 'Mali',\n",
-       " 'Malta',\n",
-       " 'Mauritania',\n",
-       " 'Mauritius',\n",
-       " 'Mexico',\n",
-       " 'Moldova',\n",
-       " 'Mongolia',\n",
-       " 'Montenegro',\n",
-       " 'Morocco',\n",
-       " 'Mozambique',\n",
-       " 'Myanmar',\n",
-       " 'Namibia',\n",
-       " 'Nepal',\n",
-       " 'Netherlands',\n",
-       " 'New Zealand',\n",
-       " 'Nicaragua',\n",
-       " 'Niger',\n",
-       " 'Nigeria',\n",
-       " 'North Macedonia',\n",
-       " 'Norway',\n",
-       " 'Oman',\n",
-       " 'Pakistan',\n",
-       " 'Panama',\n",
-       " 'Paraguay',\n",
-       " 'Peru',\n",
-       " 'Philippines',\n",
-       " 'Poland',\n",
-       " 'Portugal',\n",
-       " 'Qatar',\n",
-       " 'Romania',\n",
-       " 'Russia',\n",
-       " 'Rwanda',\n",
-       " 'Saudi Arabia',\n",
-       " 'Senegal',\n",
-       " 'Serbia',\n",
-       " 'Sierra Leone',\n",
-       " 'Singapore',\n",
-       " 'Slovakia',\n",
-       " 'Slovenia',\n",
-       " 'Somalia',\n",
-       " 'Somaliland region',\n",
-       " 'South Africa',\n",
-       " 'South Korea',\n",
-       " 'South Sudan',\n",
-       " 'Spain',\n",
-       " 'Sri Lanka',\n",
-       " 'State of Palestine',\n",
-       " 'Sudan',\n",
-       " 'Suriname',\n",
-       " 'Sweden',\n",
-       " 'Switzerland',\n",
-       " 'Syria',\n",
-       " 'Taiwan Province of China',\n",
-       " 'Tajikistan',\n",
-       " 'Tanzania',\n",
-       " 'Thailand',\n",
-       " 'Togo',\n",
-       " 'Trinidad and Tobago',\n",
-       " 'Tunisia',\n",
-       " 'Turkiye',\n",
-       " 'Turkmenistan',\n",
-       " 'Uganda',\n",
-       " 'Ukraine',\n",
-       " 'United Arab Emirates',\n",
-       " 'United Kingdom',\n",
-       " 'United States',\n",
-       " 'Uruguay',\n",
-       " 'Uzbekistan',\n",
-       " 'Venezuela',\n",
-       " 'Vietnam',\n",
-       " 'Yemen',\n",
-       " 'Zambia',\n",
-       " 'Zimbabwe']"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matching Countries:\n",
+      "Honduras\n",
+      "Trinidad and Tobago\n",
+      "Costa Rica\n",
+      "Lesotho\n",
+      "Indonesia\n",
+      "Niger\n",
+      "Ethiopia\n",
+      "Jamaica\n",
+      "Afghanistan\n",
+      "Chad\n",
+      "Moldova\n",
+      "Romania\n",
+      "Central African Republic\n",
+      "South Korea\n",
+      "Azerbaijan\n",
+      "Turkmenistan\n",
+      "Botswana\n",
+      "Ivory Coast\n",
+      "Liberia\n",
+      "Peru\n",
+      "Iraq\n",
+      "Thailand\n",
+      "Uruguay\n",
+      "Lebanon\n",
+      "Bulgaria\n",
+      "Kuwait\n",
+      "Estonia\n",
+      "Ecuador\n",
+      "United States\n",
+      "Mauritius\n",
+      "United Arab Emirates\n",
+      "Guatemala\n",
+      "Belgium\n",
+      "China\n",
+      "Germany\n",
+      "Iran\n",
+      "Malawi\n",
+      "Qatar\n",
+      "Latvia\n",
+      "Slovakia\n",
+      "Spain\n",
+      "El Salvador\n",
+      "Ukraine\n",
+      "Portugal\n",
+      "Bosnia and Herzegovina\n",
+      "Brazil\n",
+      "Bhutan\n",
+      "Russia\n",
+      "Zambia\n",
+      "Hungary\n",
+      "Japan\n",
+      "Philippines\n",
+      "Belize\n",
+      "Chile\n",
+      "United Kingdom\n",
+      "Belarus\n",
+      "Yemen\n",
+      "Mexico\n",
+      "Angola\n",
+      "Colombia\n",
+      "Armenia\n",
+      "Serbia\n",
+      "Senegal\n",
+      "Jordan\n",
+      "Pakistan\n",
+      "Cameroon\n",
+      "Georgia\n",
+      "France\n",
+      "Gabon\n",
+      "Oman\n",
+      "Egypt\n",
+      "Malaysia\n",
+      "Vietnam\n",
+      "Dominican Republic\n",
+      "Albania\n",
+      "Myanmar\n",
+      "Ghana\n",
+      "Nigeria\n",
+      "Rwanda\n",
+      "Venezuela\n",
+      "Zimbabwe\n",
+      "Djibouti\n",
+      "Namibia\n",
+      "Haiti\n",
+      "Mongolia\n",
+      "Uganda\n",
+      "Saudi Arabia\n",
+      "Tanzania\n",
+      "Paraguay\n",
+      "Malta\n",
+      "Poland\n",
+      "Argentina\n",
+      "Finland\n",
+      "Cuba\n",
+      "Morocco\n",
+      "Mozambique\n",
+      "Singapore\n",
+      "Slovenia\n",
+      "Lithuania\n",
+      "Australia\n",
+      "Canada\n",
+      "Kyrgyzstan\n",
+      "Switzerland\n",
+      "India\n",
+      "Israel\n",
+      "Denmark\n",
+      "Benin\n",
+      "Madagascar\n",
+      "Bangladesh\n",
+      "Sri Lanka\n",
+      "Tajikistan\n",
+      "Bolivia\n",
+      "Bahrain\n",
+      "Kenya\n",
+      "Croatia\n",
+      "Burkina Faso\n",
+      "Greece\n",
+      "Sweden\n",
+      "Nepal\n",
+      "Guyana\n",
+      "New Zealand\n",
+      "Uzbekistan\n",
+      "Iceland\n",
+      "Guinea\n",
+      "Algeria\n",
+      "Kazakhstan\n",
+      "Sudan\n",
+      "North Macedonia\n",
+      "Panama\n",
+      "Suriname\n",
+      "Cyprus\n",
+      "Maldives\n",
+      "South Sudan\n",
+      "Syria\n",
+      "Comoros\n",
+      "Austria\n",
+      "Luxembourg\n",
+      "Tunisia\n",
+      "Burundi\n",
+      "Eswatini\n",
+      "Mali\n",
+      "Togo\n",
+      "Libya\n",
+      "Netherlands\n",
+      "Cambodia\n",
+      "Norway\n",
+      "Montenegro\n",
+      "Nicaragua\n",
+      "Laos\n",
+      "Italy\n",
+      "South Africa\n",
+      "Somalia\n",
+      "Mauritania\n",
+      "Sierra Leone\n",
+      "Total matching countries:  154\n"
+     ]
     }
    ],
    "source": [
-    "list(happiness_report['Country name'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Afghanistan',\n",
-       " 'Albania',\n",
-       " 'Algeria',\n",
-       " 'Andorra',\n",
-       " 'Angola',\n",
-       " 'Anguilla',\n",
-       " 'Antigua and Barbuda',\n",
-       " 'Argentina',\n",
-       " 'Armenia',\n",
-       " 'Australia',\n",
-       " 'Austria',\n",
-       " 'Azerbaijan',\n",
-       " 'The Bahamas',\n",
-       " 'Bahrain',\n",
-       " 'Bangladesh',\n",
-       " 'Barbados',\n",
-       " 'Belarus',\n",
-       " 'Belgium',\n",
-       " 'Belize',\n",
-       " 'Benin',\n",
-       " 'Bhutan',\n",
-       " 'Bolivia',\n",
-       " 'Bosnia and Herzegovina',\n",
-       " 'Botswana',\n",
-       " 'Brazil',\n",
-       " 'British Virgin Islands',\n",
-       " 'Brunei',\n",
-       " 'Bulgaria',\n",
-       " 'Burkina Faso',\n",
-       " 'Burundi',\n",
-       " 'Cape Verde',\n",
-       " 'Cambodia',\n",
-       " 'Cameroon',\n",
-       " 'Canada',\n",
-       " 'Central African Republic',\n",
-       " 'Chad',\n",
-       " 'Chile',\n",
-       " 'China',\n",
-       " 'Colombia',\n",
-       " 'Comoros',\n",
-       " 'Republic of the Congo',\n",
-       " 'Cook Islands',\n",
-       " 'Costa Rica',\n",
-       " 'Ivory Coast',\n",
-       " 'Croatia',\n",
-       " 'Cuba',\n",
-       " 'Cyprus',\n",
-       " 'Czech Republic',\n",
-       " 'North Korea',\n",
-       " 'Democratic Republic of the Congo',\n",
-       " 'Denmark',\n",
-       " 'Djibouti',\n",
-       " 'Dominica',\n",
-       " 'Dominican Republic',\n",
-       " 'Ecuador',\n",
-       " 'Egypt',\n",
-       " 'El Salvador',\n",
-       " 'Equatorial Guinea',\n",
-       " 'Eritrea',\n",
-       " 'Estonia',\n",
-       " 'Eswatini',\n",
-       " 'Ethiopia',\n",
-       " 'Fiji',\n",
-       " 'Finland',\n",
-       " 'France',\n",
-       " 'Gabon',\n",
-       " 'The Gambia',\n",
-       " 'Georgia',\n",
-       " 'Germany',\n",
-       " 'Ghana',\n",
-       " 'Greece',\n",
-       " 'Grenada',\n",
-       " 'Guatemala',\n",
-       " 'Guinea',\n",
-       " 'Guinea0Bissau',\n",
-       " 'Guyana',\n",
-       " 'Haiti',\n",
-       " 'Vatican City',\n",
-       " 'Honduras',\n",
-       " 'Hungary',\n",
-       " 'Iceland',\n",
-       " 'India',\n",
-       " 'Indonesia',\n",
-       " 'Iran',\n",
-       " 'Iraq',\n",
-       " 'Republic of Ireland',\n",
-       " 'Israel',\n",
-       " 'Italy',\n",
-       " 'Jamaica',\n",
-       " 'Japan',\n",
-       " 'Jordan',\n",
-       " 'Kazakhstan',\n",
-       " 'Kenya',\n",
-       " 'Kiribati',\n",
-       " 'Kuwait',\n",
-       " 'Kyrgyzstan',\n",
-       " 'Laos',\n",
-       " 'Latvia',\n",
-       " 'Lebanon',\n",
-       " 'Lesotho',\n",
-       " 'Liberia',\n",
-       " 'Libya',\n",
-       " 'Liechtenstein',\n",
-       " 'Lithuania',\n",
-       " 'Luxembourg',\n",
-       " 'Madagascar',\n",
-       " 'Malawi',\n",
-       " 'Malaysia',\n",
-       " 'Maldives',\n",
-       " 'Mali',\n",
-       " 'Malta',\n",
-       " 'Marshall Islands',\n",
-       " 'Mauritania',\n",
-       " 'Mauritius',\n",
-       " 'Mexico',\n",
-       " 'Federated States of Micronesia',\n",
-       " 'Monaco',\n",
-       " 'Mongolia',\n",
-       " 'Montenegro',\n",
-       " 'Montserrat',\n",
-       " 'Morocco',\n",
-       " 'Mozambique',\n",
-       " 'Myanmar',\n",
-       " 'Namibia',\n",
-       " 'Nauru',\n",
-       " 'Nepal',\n",
-       " 'Netherlands',\n",
-       " 'New Zealand',\n",
-       " 'Nicaragua',\n",
-       " 'Niger',\n",
-       " 'Nigeria',\n",
-       " 'Niue',\n",
-       " 'North Macedonia',\n",
-       " 'Norway',\n",
-       " 'Oman',\n",
-       " 'Pakistan',\n",
-       " 'Palau',\n",
-       " 'Panama',\n",
-       " 'Papua New Guinea',\n",
-       " 'Paraguay',\n",
-       " 'Peru',\n",
-       " 'Philippines',\n",
-       " 'Poland',\n",
-       " 'Portugal',\n",
-       " 'Qatar',\n",
-       " 'South Korea',\n",
-       " 'Moldova',\n",
-       " 'Romania',\n",
-       " 'Russia',\n",
-       " 'Rwanda',\n",
-       " 'Saint Kitts and Nevis',\n",
-       " 'Saint Lucia',\n",
-       " 'Saint Vincent and the Grenadines',\n",
-       " 'Samoa',\n",
-       " 'San Marino',\n",
-       " 'Sï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿',\n",
-       " 'Saudi Arabia',\n",
-       " 'Senegal',\n",
-       " 'Serbia',\n",
-       " 'Seychelles',\n",
-       " 'Sierra Leone',\n",
-       " 'Singapore',\n",
-       " 'Slovakia',\n",
-       " 'Slovenia',\n",
-       " 'Solomon Islands',\n",
-       " 'Somalia',\n",
-       " 'South Africa',\n",
-       " 'South Sudan',\n",
-       " 'Spain',\n",
-       " 'Sri Lanka',\n",
-       " 'Palestinian National Authority',\n",
-       " 'Sudan',\n",
-       " 'Suriname',\n",
-       " 'Sweden',\n",
-       " 'Switzerland',\n",
-       " 'Syria',\n",
-       " 'Tajikistan',\n",
-       " 'Thailand',\n",
-       " 'East Timor',\n",
-       " 'Togo',\n",
-       " 'Tokelau',\n",
-       " 'Tonga',\n",
-       " 'Trinidad and Tobago',\n",
-       " 'Tunisia',\n",
-       " 'Turkey',\n",
-       " 'Turkmenistan',\n",
-       " 'Turks and Caicos Islands',\n",
-       " 'Tuvalu',\n",
-       " 'Uganda',\n",
-       " 'Ukraine',\n",
-       " 'United Arab Emirates',\n",
-       " 'United Kingdom',\n",
-       " 'Tanzania',\n",
-       " 'United States',\n",
-       " 'Uruguay',\n",
-       " 'Uzbekistan',\n",
-       " 'Vanuatu',\n",
-       " 'Venezuela',\n",
-       " 'Vietnam',\n",
-       " 'Yemen',\n",
-       " 'Zambia',\n",
-       " 'Zimbabwe']"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(education_report['Countries and areas'].unique())"
+    "happiness_countries = happiness_report['Country name'].unique()\n",
+    "education_countries = education_report['Countries and areas'].unique()\n",
+    "\n",
+    "matching_countries = set(happiness_countries).intersection(education_countries)\n",
+    "\n",
+    "print(\"Matching Countries:\")\n",
+    "for country in matching_countries:\n",
+    "    print(country)\n",
+    "\n",
+    "print(\"Total matching countries: \", len(matching_countries))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Link the Datasets"
+    "## 3.2 Link the Datasets  : Happiness dataset and Education Dataset"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Can merge on a common column (country) pd.merge()\n",
+    "* Will need to ensure the column names match\n",
+    "* Want to remove the log/lat from education as not necessary.\n",
+    "* possibly collate school data ?\n",
+    "* Also remove unmatching country rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
