Updadte params, final push

--- a/DataDrivenModel.ipynb
+++ b/DataDrivenModel.ipynb
@@ -734,8 +734,7 @@
    "metadata": {},
    "source": [
     "### 4.3 Choose Estimator\n",
-    "The next step was to create the ElasticNet Linear Regression Model. I chose this model based on scikit-learn's machine learning map tutorial (scikit-learn, 2024).\n",
-    "This estimator also highlighted the Lasso Linear Regression option as potentially relevant for my project. I decided to implement and evaluate both to see which would be the better fit."
+    "The next step was to choose and implemente the model(s). I implemented and evaluated both Lasso and ElasticNet Linear Regression Models, along with the Stochastic Gradient Descent Model (SGD), to determine which would be the better fit for the data. Following scikit-learn's machine learning map tutorial (scikit-learn, 2024), I selected ElasticNet due to its potential relevance for the project. However, I also explored the Lasso model, given its similarity to ElasticNet, as well as the SGD model, to compare their performances."
    ]
   },
   {
@@ -751,7 +750,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# params = alpha (weight of penalties) & lambda (overall strength of regularisation)\n",
     "elastic_model = ElasticNet()\n",
     "elastic_model.fit(X_train, y_train)"
    ]
@@ -1060,7 +1058,7 @@
    "outputs": [],
    "source": [
     "alpha_values = np.linspace(0.01, 1, 100)\n",
-    "l1_ratio_values = np.linspace(0, 1, 100)\n",
+    "l1_ratio_values = np.linspace(0.1, 1, 100)\n",
     "max_iter = 10000\n",
     "\n",
     "best_alpha = None\n",
@@ -1102,23 +1100,23 @@
     "\n",
     "Interestingly, in the case of the ElasticNet model, it also performed better using the RobustScaler. This may be due to a difference in sensitivity to scaling by the model. Ouput as follows:\n",
     "\n",
-    "RobustScaler Results\n",
+    "RobustScaler Results (approx 10.8s)\n",
     "* Alpha:  0.02\n",
-    "* L1 Ratio:  0.3434343434343435\n",
-    "* MSE:  0.37697763615039054\n",
-    "* R2:  0.7534039908367942\n",
+    "* L1 Ratio:  0.33636363636363636\n",
+    "* MSE:  0.37696575350260825\n",
+    "* R2:  0.7534117637475465\n",
     "\n",
-    "StandardScaler Results\n",
+    "StandardScaler Results (approx 11.1s)\n",
     "* Alpha:  0.05\n",
-    "* L1 Ratio:  0.21212121212121213\n",
-    "* MSE:  0.3812524170788433\n",
-    "* R2:  0.750607687247626\n",
+    "* L1 Ratio:  0.2090909090909091\n",
+    "* MSE:  0.3812342864628619\n",
+    "* R2:  0.7506195472019468\n",
     "\n",
-    "No Scaler Results\n",
+    "No Scaler Results (approx 27.3s)\n",
     "* Alpha:  0.01\n",
-    "* L1 Ratio:  0.9393939393939394\n",
-    "* MSE:  0.3851970694655492\n",
-    "* R2:  0.7480273338186239"
+    "* L1 Ratio:  0.9363636363636363\n",
+    "* MSE:  0.38519590698139816\n",
+    "* R2:  0.7480280942455694"
    ]
   },
   {
