Included github repo

--- a/DataDrivenModel.ipynb
+++ b/DataDrivenModel.ipynb
@@ -43,6 +43,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Link to project repository : https://github.com/EmoSense/data_explore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Stage 1"
    ]
   },
