spelling error fix

--- a/DataDrivenModel.ipynb
+++ b/DataDrivenModel.ipynb
@@ -5248,7 +5248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -5257,7 +5257,7 @@
      "text": [
       "Best SGD Model:\n",
       "Alpha: 0.0203\n",
-      "L1 ratio:  0.0\n",
+      "L1 ratio:  0.01\n",
       "MSE: 0.38770354856706724\n",
       "R2: 0.7463877465216238\n"
      ]
@@ -5265,7 +5265,7 @@
    ],
    "source": [
     "alpha_values = np.linspace(0.0001, 1, 100)\n",
-    "l1_ratio_values = np.linspace(0, 1, 100)\n",
+    "l1_ratio_values = np.linspace(0.01, 1, 100)\n",
     "max_iter = 1000\n",
     "\n",
     "best_alpha = None\n",
@@ -5305,7 +5305,7 @@
     "\n",
     "RobustScaler Results\n",
     "* Alpha: 0.0203\n",
-    "* L1 ratio:  0.0\n",
+    "* L1 ratio:  0.01\n",
     "* MSE: 0.38770354856706724\n",
     "* R2: 0.7463877465216238\n",
     "\n",
@@ -5383,16 +5383,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In conclusion, all the models yielded almost identical results after fine-tuning, with the best Lasso model having an alpha value of 0.0203 and achieving an MSE of 0.3784 and an R2 of 0.7525. The best ElasticNet model had an alpha of 0.05 and an L1 ratio of 0.2121, resulting in an MSE of 0.3813 and an R2 of 0.7506. Similarly, the SGD model with an alpha of 0.0203 and an L1 ratio of 0.0 achieved an MSE of 0.3877 and an R2 of 0.7464.\n",
-    "\n",
-    "During the fine-tuning stage, testing a range of values from 0.0001 to 1 for the SGD and Lasso models, and 0.01 to 1 for the ElasticNet model, found that the optimal alpha values were 0.0203 fro both, leading to a slight improvement in predictions. Additionally, the best alpha ratio for the ElasticNet model was found to be 0.5.\n",
-    "\n",
-    "The MSE results for both models after fine-tuning showed a significant improvement compared to the initial values of 0.77, with the refined models achieving approximately 0.39. This suggests that the predicted life ladder values are much closer to the actual values, as a lower MSE indicates better model performance.\n",
-    "\n",
-    "Furthermore, the R-squared (R2) values indicated that all models can predict approximately 75% of the variance in the target variable. This represents a notable improvement from the pre-fine-tuning R2 values of 0.49 for both the Lasso and Elastic, and -4.279688189418018e+23 for the SGD.\n",
-    "\n",
-    "The biggest improvement through feature scaling and fine tuning was for the SGD model, leading to near identcal results as teh other two models.\n",
-    "\n",
+    "In conclusion, all the models yielded almost identical results after optimisation, with the best Lasso model having an alpha value of 0.0203 and achieving an MSE of 0.3784 and an R2 of 0.7525. The best ElasticNet model had an alpha of 0.05 and an L1 ratio of 0.2121, resulting in an MSE of 0.3813 and an R2 of 0.7506. Similarly, the SGD model with an alpha of 0.0203 and an L1 ratio of 0.01 achieved an MSE of 0.3877 and an R2 of 0.7464. During the optimisation stage, testing a range of values from 0.0001 to 1 for the SGD and Lasso models, and 0.01 to 1 for the ElasticNet model, found that the optimal alpha values were 0.0203 for both, leading to a slight improvement in predictions.\n",
+    "Additionally, the best alpha ratio for the ElasticNet model was found to be 0.5. The MSE results for both models after optimisation showed a significant improvement compared to the initial values of 0.77, with the refined models achieving approximately 0.39. This suggests that the predicted life ladder values are much closer to the actual values, as a lower MSE indicates better model performance. Furthermore, the R-squared (R2) values indicated that all models can predict approximately 75% of the variance in the target variable. This represents a notable improvement from the pre-fine-tuning R2 values of 0.49 for both the Lasso and Elastic, and -4.279688189418018e+23 for the SGD. The biggest improvement through feature scaling and fine tuning was for the SGD model, leading to near identcal results as the other two models.\n",
     "Despite the relatively close approximation, there remains a discernible gap between the predicted and actual values. Further investigation into the factors contributing to this variance is necessary to enhance the accuracy of the models and improve their predictive capabilities."
    ]
   },
